feat(ReadmeOSS): Fix issues on license info generation
Signed-off-by: Akshit Joshi <akshit.joshi@siemens-healthineers.com>